--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Richard hanrick</h1>
+          <h1 class="name" title="Nacher Uddin Sakib">Nacher Uddin Sakib</h1>
 
           <p class="title">Web developer</p>
         </div>
