--- a/index.html
+++ b/index.html
@@ -209,17 +209,11 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Dhaka,Bangladesh working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            I'm a Creative Director and UI/UX Designer based in Dhaka, Bangladesh, specializing in web development and digital design. I enjoy transforming complex ideas into clean, intuitive, and user-friendly interfaces. My focus is on creating websites that are both highly functional and visually engaging, ensuring a seamless user experience.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+           I always add a personal and creative touch to every project, aiming to deliver designs that are not only attractive but also meaningful. My mission is to help brands communicate their message and identity effectively. Over the years, I’ve had the opportunity to design for several well-known companies, creating digital experiences that leave a lasting impression.
           </p>
         </section>
 
