--- a/index.html
+++ b/index.html
@@ -379,41 +379,36 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">University of Asia Pacific</h4>
 
-              <span>2007 — 2008</span>
+              <span>2023 — Present</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+  B.Sc. in Computer Science & Engineering
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Ibn Taimiya School & College</h4>
 
-              <span>2006 — 2007</span>
+              <span>2019 - 2021</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+   Higher Secondary Certificate (HSC)
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">Ibn Taimiya School & College</h4>
 
-              <span>2002 — 2004</span>
+              <span>2017 - 2019</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+ Secondary School Certificate (SSC)
               </p>
 
             </li>
