--- a/index.html
+++ b/index.html
@@ -559,7 +559,12 @@
         <section class="projects">
 
          
-         
+          <div class="filter-select-box">
+
+            <button class="filter-select" data-select>
+
+              <div class="select-value" data-selecct-value>Select category</div>
+
               <div class="select-icon">
                 <ion-icon name="chevron-down"></ion-icon>
               </div>
