--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
+  <a href="https://www.facebook.com/nacheruddinsakib" class="social-link" target="_blank" rel="noopener noreferrer">
+    <ion-icon name="logo-facebook"></ion-icon>
+  </a>
+</li>
+
 
 	<li class="social-item">
             <a href="#" class="social-link">
