--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+8801786573969" class="contact-link">+8801786573969</a>
+              <a href="tel:+8801581658772" class="contact-link">+8801581658772</a>
             </div>
 
           </li>
@@ -135,22 +135,24 @@
 
 
 	<li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-linkedin"></ion-icon>
-            </a>
-          </li>
+  <a href="https://www.linkedin.com/in/nacher-uddin-sakib-364b9b376/" class="social-link" target="_blank" rel="noopener noreferrer">
+    <ion-icon name="logo-linkedin"></ion-icon>
+  </a>
+</li>
+
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
+  <a href="https://x.com/imsakib32" class="social-link" target="_blank" rel="noopener noreferrer">
+    <ion-icon name="logo-twitter"></ion-icon>
+  </a>
+</li>
+
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
+  <a href="https://www.instagram.com/m_sakib.32/" class="social-link" target="_blank" rel="noopener noreferrer">
+    <ion-icon name="logo-instagram"></ion-icon>
+  </a>
+</li>
 
         </ul>
 
@@ -208,20 +210,14 @@
         </header>
 
         <section class="about-text">
-          <p>
-            I'm Creative Director and UI/UX Designer from Dhaka,Bangladesh working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
-          </p>
+  <p style="text-align: justify;">
+    I’m <strong>Nacher Uddin Sakib</strong>, a web developer from Dhaka, Bangladesh who enjoys creating simple and effective websites and apps. I use modern tools like JavaScript, Python, and AI to build solutions that look great and perform well.
+  </p>
 
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
-          </p>
-        </section>
+  <p style="text-align: justify;">
+    I work on both frontend and backend to ensure websites are fast, responsive, and easy to use on any device. I love solving problems with clean code and always seek to learn new technologies to deliver better digital experiences.
+  </p>
+</section>
 
 
         <!--
