--- a/index.html
+++ b/index.html
@@ -431,43 +431,27 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Graphic Designer</h4>
 
-              <span>2015 — Present</span>
+              <span>2024 — Present</span>
 
-              <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
-              </p>
+              <p style="text-align: justify;">
+  Worked with global clients on Fiverr, providing diverse professional design services focused on creativity, clear communication, and client satisfaction.
+</p>
 
             </li>
 
+            
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Video Editor</h4>
 
-              <span>2013 — 2015</span>
+              <span>2025 — Present</span>
 
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+               <p style="text-align: justify;">
+  Transforms raw footage into polished, engaging video content. Edits, adds sound, graphics, and effects, ensuring a compelling final product.
+</p>
 
-            </li>
-
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Web designer</h4>
-
-              <span>2010 — 2013</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
 
             </li>
 
