--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
 
               <span>2024 — Present</span>
 
-              <p style="text-align: justify;">
-  Worked with global clients on Fiverr, providing diverse professional design services focused on creativity, clear communication, and client satisfaction.
-</p>
+              <p class="timeline-text">
+                Worked with global clients through Fiverr, delivering a wide range of professional design services with an emphasis on creativity, communication, and client satisfaction.
+              </p>
 
             </li>
 
@@ -448,10 +448,10 @@
 
               <span>2025 — Present</span>
 
-               <p style="text-align: justify;">
-  Transforms raw footage into polished, engaging video content. Edits, adds sound, graphics, and effects, ensuring a compelling final product.
-</p>
+              <p class="timeline-text">
+                Transforms raw footage into polished, engaging video content. Edits, adds sound, graphics, and effects, ensuring a compelling final product.
 
+              </p>
 
             </li>
 
