--- a/index.html
+++ b/index.html
@@ -424,19 +424,17 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3">Hobbies</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Graphic Designer</h4>
-
-              <span>2024 — Present</span>
+              <h4 class="h4 timeline-item-title">Playing Games</h4>
 
               <p class="timeline-text">
-                Worked with global clients through Fiverr, delivering a wide range of professional design services with an emphasis on creativity, communication, and client satisfaction.
+                My hobby is playing games, which helps me relax, stay sharp, and fuel my creativity and problem-solving skills.
               </p>
 
             </li>
