--- a/index.html
+++ b/index.html
@@ -439,15 +439,22 @@
 
             </li>
 
-            
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Video Editor</h4>
-
-              <span>2025 — Present</span>
+              <h4 class="h4 timeline-item-title">Watching Movies & TV-Series</h4>
 
               <p class="timeline-text">
-                Transforms raw footage into polished, engaging video content. Edits, adds sound, graphics, and effects, ensuring a compelling final product.
+                My hobby is watching movies and TV series, which helps me relax, explore different stories and cultures, and spark creative inspiration.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Cooking</h4>
+
+              <p class="timeline-text">
+                My hobby is cooking, which allows me to express creativity, learn patience, and find joy in making and sharing delicious meals.
 
               </p>
 
