--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Nacher Uddin Sakib">Nacher Uddin Sakib</h1>
 
-          <p class="title">Web developer</p>
+          <p class="title">CSE Student</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -211,12 +211,11 @@
 
         <section class="about-text">
   <p style="text-align: justify;">
-    I’m <strong>Nacher Uddin Sakib</strong>, a web developer from Dhaka, Bangladesh who enjoys creating simple and effective websites and apps. I use modern tools like JavaScript, Python, and AI to build solutions that look great and perform well.
+    Hi, I'm Sakib, and I'm in my fifth semester as a third-year student of computer science and engineering.I have a strong interest in UI/UX design and web programming.I enjoy creating simple, responsive websites that are both aesthetically pleasing and useful.My objective is to effortlessly integrate design and coding to produce user-friendly digital experiences.
   </p>
 
   <p style="text-align: justify;">
-    I work on both frontend and backend to ensure websites are fast, responsive, and easy to use on any device. I love solving problems with clean code and always seek to learn new technologies to deliver better digital experiences.
-  </p>
+I love to cook, play video games, and watch movies when I'm not using technology.I'm also a huge fan of Cristiano Ronaldo, whose perseverance and discipline motivate me every day. Whether it's learning a new framework or honing my design methodology, I'm always learning new things and challenging myself to get better.  </p>
 </section>
 
 
@@ -444,12 +443,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
+                <h5 class="h5">C/C++</h5>
+                <data value="50">50%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
+                <div class="skill-progress-fill" style="width: 50%;"></div>
               </div>
 
             </li>
@@ -457,7 +456,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
+                <h5 class="h5">HTML</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -470,8 +469,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
+                <h5 class="h5">Python</h5>
+                <data value="80">80%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -483,12 +482,25 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
+                <h5 class="h5">CSS</h5>
+                <data value="60">60%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
+                <div class="skill-progress-fill" style="width: 60%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Java</h5>
+                <data value="40">40%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 40%;"></div>
               </div>
 
             </li>
