--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <!--
     - favicon
   -->
-  
-
+   <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon"> 
   <!--
     - custom css link
   -->
