--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img class= "profile-image"src="assets\images\img.jpg" alt="Nacher Uddin Sakib" width="80">
+          <img class= "profile-image"src="assets\images\image.jpg" alt="Nacher Uddin Sakib" width="80">
         </figure>
 
         <div class="info-content">
